Fixed footer spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -132,9 +132,6 @@ nav ul li {
 /*****************************************
 *    FOOTER
 ******************************************/
-footer {
-  margin: 1rem;
-}
 
 /*****************************************
 *    CSS styles for larger screens
